tests/ui/rfcs/rfc-2457-non-ascii-idents/crate_name_nonascii_forbidden.rs
extern crate ьаг; //~ ERROR cannot load a crate with a non-ascii name `ьаг`

fn main() {}
